# utllib

./: .gitmodules  CMakeLists.txt  main.cpp  standart_library.h  ucontainer.hpp  udetail.hpp  uparse.hpp  upattern.hpp  utility.hpp  utime.hpp  vcpkg.json
buildsystem/cmake/: CMakeLists.txt
buildsystem/msvc/: msvc.vcxproj  msvc.vcxproj.filters
include/: ufstream.hpp  upattern.hpp  uthreading.hpp  utl.hpp  uutility.hpp
logger/: CMakeLists.txt  debugbreak.h  formatter.h  logger.h
logger/buildsystem/cmake/: CMakeLists.txt
logger/buildsystem/msvc/: msvc.vcxproj  msvc.vcxproj.filters
logger/output/: OutputBase.cpp  OutputCOUT.cpp  OutputWinCmd.cpp
source/: CMakeLists.txt  debug.hpp  enum.hpp  hash.hpp  logger.hpp  manager.cpp  manager.hpp  memory.cpp  memory.h  memory.hpp  network.cpp  network.hpp  serialization.cpp  serialization.hpp  standart_library.h  string.hpp  udatatypes.hpp  ufstream.hpp  umemory.hpp  upattern.hpp  ureactive.hpp  uthreading.hpp  utility.cpp  utl.hpp  uuid.cpp  uuid.hpp  uutility.hpp  zipextractor.cpp  zipextractor.hpp
source/container/: CMakeLists.txt  container.cpp  flags.h  hash_map.h  lookup_table.h  unique_queue.h  vector.h  vector_view.hpp
source/containers/: cantainers.hpp  string.hpp
source/debugging/: CMakeLists.txt  debugbreak.h
source/delegate/: function.hpp
source/design_pattern/: CMakeLists.txt  pattern.h
source/filesystem/: CMakeLists.txt  filesystem_wrapper.cpp  filesystem_wrapper.h
source/logger/: CMakeLists.txt  formatter.h  logger.cpp  logger.h
source/logger/log_output/: base_output.cpp  base_output.h  cout_output.cpp  cout_output.h  file_output.cpp  file_output.h  win_output.cpp  win_output.h
source/memory/: allocator.hpp  manager.cpp  manager.hpp
source/networking/: CMakeLists.txt  address.h  llsocket.h  socket_manager.cpp  socket_manager.h  tcp_socket.cpp  tcp_socket.h
source/networking/platform_socket/: bsd_socket.cpp  bsd_socket.h
source/networking/tcp/: tcp_server.h  tcp_socket.h
source/parsing/: CMakeLists.txt  argparse.h  json_parser.h  sjson_parser.h
source/pattern/: observer.hpp  singleton.hpp
source/plugin/: CMakeLists.txt  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
source/reactive/: CMakeLists.txt  command_processor.h  event_dispatcher.h  function.h  reactive.cpp  variable.h  variable.hpp
source/threading/: CMakeLists.txt  threading.cpp  threading.hpp  threadpool.hpp
source/util/: non_copy_movable.hpp  non_copyable.hpp  non_movable.hpp
source/utils/: CMakeLists.txt  base64.cpp  base64.h  hash.h  reflection.h  stopwatch.h  uuid.cpp  uuid.h
test/: CMakeLists.txt  hash_table6.h  hash_table8.h  main.cpp
