cmake_minimum_required(VERSION 3.18)
project(utility_parsing)

file(GLOB_RECURSE UTILITY_PARSING_SOURCES *.cpp)
file(GLOB_RECURSE UTILITY_PARSING_HEADERS *.h *.hpp *.hh)

add_library(${PROJECT_NAME} STATIC ${UTILITY_PARSING_SOURCES} ${UTILITY_PARSING_HEADERS})

target_include_directories(${PROJECT_NAME}
	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
	PUBLIC "${UTILITY_LIB_ROOT}/source"
)