cmake_minimum_required(VERSION 3.19.1)
project(utllogger)

find_package(Backward CONFIG REQUIRED)

set(UTILITY_LOGGER_SOURCES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../)

file(GLOB LOGGER_SOURCES ${UTILITY_LOGGER_SOURCES_PATH}*.cpp ${UTILITY_LOGGER_SOURCES_PATH}*.c ${UTILITY_LOGGER_SOURCES_PATH}*.cc ${UTILITY_LOGGER_SOURCES_PATH}*.h ${UTILITY_LOGGER_SOURCES_PATH}*.hpp)
file(GLOB LOGGER_OUTPUT_SOURCES ${UTILITY_LOGGER_SOURCES_PATH}output/*.cpp ${UTILITY_LOGGER_SOURCES_PATH}output/*.c ${UTILITY_LOGGER_SOURCES_PATH}output/*.cc ${UTILITY_LOGGER_SOURCES_PATH}output/*.h ${UTILITY_LOGGER_SOURCES_PATH}output/*.hpp)

add_library(${PROJECT_NAME} STATIC ${LOGGER_SOURCES} ${LOGGER_OUTPUT_SOURCES})

target_link_libraries(${PROJECT_NAME} PRIVATE Backward::Backward)

target_include_directories(${PROJECT_NAME} 
PUBLIC "${UTILITY_LOGGER_SOURCES_PATH}"
)